--- a/style.css
+++ b/style.css
@@ -215,6 +215,11 @@ hr:after {
   -moz-animation: moveclouds 20s linear infinite;
   -o-animation: moveclouds 20s linear infinite;
 }
+.main{
+  width: 300px;
+  height: 300px;
+  background-color: antiquewhite;
+}
 
 @-webkit-keyframes moveclouds {
   0% {
