--- a/popup.css
+++ b/popup.css
@@ -1,9 +1,21 @@
 body{
-    width: 200px;
+    width: 300px;
     height: 300px;
-    background-color: aliceblue
+    background-color: rgb(10, 0, 0);
+text-align: center;
     
 }
+h2{
+    color:whitesmoke
+}
 h1{
-    color: green;
+    color:red
+}
+img{
+    height:50px;
+    width:50px;
+}
+.head{
+    display: flex;
+    justify-content: space-evenly;
 }
